# internal/controllers/http/banner.go
@@ -209,100 +209,3 @@ func (r *Router) UpdateBanner(c *gin.Context) {
 	// Jika berhasil, kembalikan respon sukses
 	SendResponse(c, banner, "success")
 }
-
-//
-//func GetBannerById(c *gin.Context) { // Get model if exist
-//	var banner models.Banner
-//
-//	db := c.MustGet("db").(*gorm.DB)
-//	if err := db.Where("id = ?", c.Param("id")).First(&banner).Error; err != nil {
-//		SendError(c, "Record not found", err.Error(), 404)
-//		return
-//	}
-//
-//	// Mendapatkan alamat server dari permintaan
-//	var scheme string
-//	// Cek apakah request menggunakan HTTPS (TLS)
-//	if c.Request.TLS != nil {
-//		scheme = "https://"
-//	} else {
-//		scheme = "http://"
-//	}
-//
-//	// Gabungkan dengan host
-//	serverAddress := scheme + c.Request.Host
-//
-//	// Mengubah setiap entri dalam data portofolio untuk menambahkan URL lengkap
-//	banner.Img = serverAddress + banner.Img
-//
-//	SendResponse(c, banner, "Get banner by id "+c.Param("id"))
-//}
-//
-//func UpdateBanner(c *gin.Context) {
-//
-//	db := c.MustGet("db").(*gorm.DB)
-//	// Get model if exist
-//	var banner models.Banner
-//	if err := db.Where("id = ?", c.Param("id")).First(&banner).Error; err != nil {
-//		SendError(c, "Record not found", err.Error(), 404)
-//		return
-//	}
-//
-//	// Validate input
-//	var input bannerInput
-//	if err := c.ShouldBind(&input); err != nil {
-//		SendError(c, "error", err.Error(), 400)
-//		return
-//	}
-//
-//	filename, errfilename := HandleUploadFile(c, "img")
-//	if errfilename != nil {
-//		SendError(c, "File upload error", errfilename.Error(), 400)
-//		return
-//	}
-//
-//	// Cek apakah ada file yang diunggah
-//	if filename != "" {
-//		// Hapus gambar lama jika ada
-//		if banner.Img != "" {
-//			oldImage := "." + banner.Img
-//			utils.RemoveFile(oldImage)
-//		}
-//	}
-//
-//	// Jika ada file yang diunggah, set nama file yang baru
-//	if filename != "" {
-//		banner.Img = constanta.DIR_FILE + filename
-//	}
-//
-//	var updatedInput models.Banner
-//	updatedInput.Title = input.Title
-//	updatedInput.Slug = input.Slug
-//	updatedInput.Desc = input.Desc
-//	updatedInput.Img = banner.Img
-//	updatedInput.Flag = input.Flag
-//	updatedInput.UpdatedAt = time.Now()
-//
-//	db.Model(&banner).Updates(updatedInput)
-//	SendResponse(c, banner, "success")
-//
-//}
-//
-//func DeleteBanner(c *gin.Context) {
-//	// Get model if exiForm
-//	db := c.MustGet("db").(*gorm.DB)
-//	var banner models.Banner
-//	if err := db.Where("id = ?", c.Param("id")).First(&banner).Error; err != nil {
-//		SendError(c, "Record not found", err.Error(), 404)
-//		return
-//	}
-//
-//	// Set the flag to 0
-//	if err := db.Model(&banner).Update("flag", false).Error; err != nil {
-//		SendError(c, "Failed to delete", err.Error(), 500)
-//		return
-//	}
-//
-//	// Return success response
-//	SendResponse(c, banner, "success")
-//}
